# c-dt-example

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
client/: Makefile  client.c  newrelic_helper.c  newrelic_helper.h
server/: CMakeLists.txt  httplib.h  server.cpp
